<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <com.upc.learnmooc.view.TopBarView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:topIcon="@drawable/toolbar_back"
        app:topTitle="个人资料"/>

    <RelativeLayout
        android:id="@+id/rl_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/seletor_bg_setting_item"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/avatar"
            android:textColor="@color/light_black_color"
            android:textSize="16sp"/>

        <com.upc.learnmooc.view.CircleImageView
            android:id="@+id/user_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_toLeftOf="@+id/right_arrow"
            android:src="@drawable/defaultimage"/>

        <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/triangle"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/seletor_bg_setting_item"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nickname"
            android:textColor="@color/light_black_color"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_nickname_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/right_arrow2"
            android:text="昵称"/>

        <ImageView
            android:id="@+id/right_arrow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/triangle"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/seletor_bg_setting_item"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mail"
            android:textColor="@color/light_black_color"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/right_arrow3"
            android:singleLine="true"
            android:src="@drawable/defaultimage"
            android:text="1178782286@qq.com"/>

        <ImageView
            android:id="@+id/right_arrow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/triangle"/>
    </RelativeLayout>
</LinearLayout>